--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -33,23 +33,23 @@
     </div>
 
     <div>
-      <section class="section" id="home">
+      <section class="banner" id="home">
         <div class="inner">
           <div class="content">
             <h1>RUBY CONFERENCE</h1>
             <p class="sizemic">
-RubyCon BKK is a monthly conference focusting on the Ruby language invented by Yukihiro “Matz” Matsumoto.
-Ruby is an Open Source langauge whogained a lot of popularity after the Ruby on Rails framework was released 
-in 2006, developed by the Danish David Heinemeier Hansson who used it to write the now world famous Basecamp.
+              <!-- RubyCon BKK is a monthly conference focusting on the Ruby language invented by Yukihiro “Matz” Matsumoto.
+              Ruby is an Open Source langauge whogained a lot of popularity after the Ruby on Rails framework was released 
+              in 2006, developed by the Danish David Heinemeier Hansson who used it to write the now world famous Basecamp.
 
-This technology is used by many of the worlds biggest tech companies in the world because of its abilty for rapid development 
-and its ability to shorten the time to market for your product. Wanne learn tech? Start here dude, we are very friendly and we help beginners get started and CTOs to get smarter.
-Thats what the Ruby commmunity does!
+              This technology is used by many of the worlds biggest tech companies in the world because of its abilty for rapid development 
+              and its ability to shorten the time to market for your product. Wanne learn tech? Start here dude, we are very friendly and we help beginners get started and CTOs to get smarter.
+              Thats what the Ruby commmunity does!
 
-Ruby on Rails developers are now the highest paying development jobs in the tech industry today, and its interest is still growing.
+              Ruby on Rails developers are now the highest paying development jobs in the tech industry today, and its interest is still growing.
 
-Amongst the companies use Ruby for their products are: Amazon, Twitter, Hulu, GroupOn, Shopify, Cruncbase, Bloomberg, Indiegogo, 
-Airbnb, SoundCloud, Heroku, Zendesk, GitHub... Well I think you get it already....
+              Amongst the companies use Ruby for their products are: Amazon, Twitter, Hulu, GroupOn, Shopify, Cruncbase, Bloomberg, Indiegogo, 
+              Airbnb, SoundCloud, Heroku, Zendesk, GitHub... Well I think you get it already.... -->
             </p>
             <h3>20th of May, 2015</h3>
             <h4>Bangkok, Thailand</h4>
@@ -59,7 +59,33 @@ Airbnb, SoundCloud, Heroku, Zendesk, GitHub... Well I think you get it already..
           </div><!-- /content -->
         </div><!-- /inner -->
       </section><!-- /section -->
-
+      
+      <section class="platinum-sponsors">
+        <a href="#">
+          <%= image_tag 'samples/logos/platinum/omise' %>
+        </a>
+        <a href="#">
+          <%= image_tag 'samples/logos/platinum/pocket-play' %>
+        </a>
+        <a href="#">
+          <%= image_tag 'samples/logos/platinum/oozou' %>
+        </a>
+        <a href="#">
+          <%= image_tag 'samples/logos/platinum/hubba' %>
+        </a>
+        <a href="#">
+          <%= image_tag 'samples/logos/platinum/tech' %>
+        </a>
+        <a href="#">
+          <%= image_tag 'samples/logos/platinum/e27' %>
+        </a>
+        <a href="#">
+          <%= image_tag 'samples/logos/platinum/github' %>
+        </a>
+        <a href="#">
+          <%= image_tag 'samples/logos/platinum/dtac' %>
+        </a>
+      </section>
 
       <section class="section" id="speakers">
         <div class="inner">
@@ -860,7 +886,7 @@ Airbnb, SoundCloud, Heroku, Zendesk, GitHub... Well I think you get it already..
       <section class="section" id="register">
         <div class="inner">
           <div class="content">
-            <div class="statement" style="color: white">
+<!--             <div class="statement" style="color: white">
               <h1 style="margin: 0px;">
                 Free Macbook!
               </h1>
@@ -886,7 +912,7 @@ Airbnb, SoundCloud, Heroku, Zendesk, GitHub... Well I think you get it already..
               <p>
                 So register today, and it will be you that can show off to your friends what you won just by showing up at Ekkamai one random Wednesday!
               </p>
-            </div>
+            </div> -->
 
             <h1>Free Registration</h1>
             <div class="row content" id="form-container">
