--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -24,11 +24,6 @@
 
 <div class="hidden-xs">
       <h1 id="logo">
-        <a href="./">
-          <span class="line1">RUBY</span>
-          <span class="line2">CON</span>
-          <span class="line3">2015</span>
-        </a>
       </h1>
     </div>
 
@@ -84,6 +79,9 @@
         </a>
         <a href="#">
           <%= image_tag 'samples/logos/platinum/dtac' %>
+        </a>
+        <a href="#">
+          <%= image_tag 'samples/logos/platinum/find-your-space' %>
         </a>
       </section>
 
@@ -871,7 +869,7 @@
               </a>
 
               <a href="#">
-                <<%= image_tag 'samples/logos/Amazon.png' %>
+                <%= image_tag 'samples/logos/Amazon.png' %>
               </a>
 
               <a href="#">
@@ -883,37 +881,43 @@
         </div><!-- /inner -->
       </section><!-- /section -->
 
-      <section class="section" id="register">
-        <div class="inner">
-          <div class="content">
-<!--             <div class="statement" style="color: white">
-              <h1 style="margin: 0px;">
-                Free Macbook!
-              </h1>
-              <center>
-                <h2 style="color: white; font-size: 36px; margin-bottom: 36px;">
-                  What the hell?
-                </h2>
-              </center>
-              <center>
-                <b>
-                  Yes, its true. We are giving away a <i>brand new fully specked</i> Macbook Air to you guys just for showing up.
-                </b>
-                <br><br>
-              </center>
-              <center>
-                <i style="font-size: 24px;">Yeah, right, whats the catch?</i> <br> <br>
-              </center>
-              <p>
-                No catch! Just register, and put your business card in the jar when you show up
-                and after the speakers are done we will draw out a business card (if you dont have one just put your name in a note) 
-                and that girl, or guy, walks out with a brand new Mac Air. Even we don't have that!
-              </p>
-              <p>
-                So register today, and it will be you that can show off to your friends what you won just by showing up at Ekkamai one random Wednesday!
-              </p>
-            </div> -->
+      <section class="promo">
+        <div class="statement" style="color: white">
+          <center>
+            <h1 style="margin: 0px;">
+              Free Macbook!
+            </h1>
+          </center>
+          <center>
+            <h2>
+              What the hell?
+            </h2>
+          </center>
+          <center>
+            <b>
+              Yes, its true. We are giving away a <i>brand new fully specked</i> Macbook Air to you guys just for showing up.
+            </b>
+            <br><br>
+          </center>
+          <center>
+            <i>Yeah, right, whats the catch?</i> <br> <br>
+          </center>
+          <p>
+            No catch! Just register, and put your business card in the jar when you show up
+            and after the speakers are done we will draw out a business card (if you dont have one just put your name in a note) 
+            and that girl, or guy, walks out with a brand new Mac Air. Even we don't have that!
+          </p>
+          <p>
+            So register today, and it will be you that can show off to your friends what you won just by showing up at Ekkamai one random Wednesday!
+          </p>
+        </div>
 
+
+      </section>
+
+      <section class="section" id="register">
+        <div class="inner-bt">
+          <div class="content">
             <h1>Free Registration</h1>
             <div class="row content" id="form-container">
 
