add amazon logo

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -66,6 +66,9 @@
           <%= image_tag 'samples/logos/platinum/oozou' %>
         </a>
         <a href="#">
+          <%= image_tag 'samples/logos/platinum/amazonWS' %>
+        </a>
+        <a href="#">
           <%= image_tag 'samples/logos/platinum/hubba' %>
         </a>
         <a href="#">
