--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -57,34 +57,34 @@
       
       <section class="platinum-sponsors">
         <a href="#">
-          <%= image_tag 'samples/logos/platinum/omise' %>
+          <%= image_tag 'samples/logos/platinum/omise.png' %>
         </a>
         <a href="#">
-          <%= image_tag 'samples/logos/platinum/pocket-play' %>
+          <%= image_tag 'samples/logos/platinum/pocket-play.png' %>
         </a>
         <a href="#">
-          <%= image_tag 'samples/logos/platinum/oozou' %>
+          <%= image_tag 'samples/logos/platinum/oozou.png' %>
         </a>
         <a href="#">
-          <%= image_tag 'samples/logos/platinum/amazonWS' %>
+          <%= image_tag 'samples/logos/platinum/amazonWS.png' %>
         </a>
         <a href="#">
-          <%= image_tag 'samples/logos/platinum/hubba' %>
+          <%= image_tag 'samples/logos/platinum/hubba.png' %>
         </a>
         <a href="#">
-          <%= image_tag 'samples/logos/platinum/tech' %>
+          <%= image_tag 'samples/logos/platinum/tech.png' %>
         </a>
         <a href="#">
-          <%= image_tag 'samples/logos/platinum/e27' %>
+          <%= image_tag 'samples/logos/platinum/e27.png' %>
         </a>
         <a href="#">
-          <%= image_tag 'samples/logos/platinum/github' %>
+          <%= image_tag 'samples/logos/platinum/github.png' %>
         </a>
         <a href="#">
-          <%= image_tag 'samples/logos/platinum/dtac' %>
+          <%= image_tag 'samples/logos/platinum/dtac.png' %>
         </a>
         <a href="#">
-          <%= image_tag 'samples/logos/platinum/find-your-space' %>
+          <%= image_tag 'samples/logos/platinum/find-your-space.png' %>
         </a>
       </section>
 
