change date and conference slider

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -179,16 +179,16 @@
   <div>
       <!-- Indicators -->
       <ol class="carousel-indicators">
-        <li class="active" data-target="#event-schedule" data-slide-to="0">Day 1</li>
-        <li data-target="#event-schedule" data-slide-to="1">Day 2</li>
-        <li data-target="#event-schedule" data-slide-to="2">Day 3</li>
+        <li class="active" data-target="#event-schedule" data-slide-to="0">Conference 1</li>
+        <li data-target="#event-schedule" data-slide-to="1">Conference 2</li>
+        <li data-target="#event-schedule" data-slide-to="2">Conference 3</li>
       </ol>
   </div>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <h2 class="schedule-day">22 November 2013</h2>
+      <h2 class="schedule-day">20th of May</h2>
 <div class="schedule">
 
   <div class="tentative">
