--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -188,7 +188,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <h2 class="schedule-day">20th of May</h2>
+      <h2 class="schedule-day">20th of May, 2015</h2>
 <div class="schedule">
 
   <div class="tentative">
@@ -386,7 +386,7 @@
 </div><!-- /schedule -->    </div>
 
     <div class="item">
-      <h2 class="schedule-day">23 November 2013</h2>
+      <h2 class="schedule-day">20th of June, 2015</h2>
 <div class="schedule">
 
   <div class="tentative">
@@ -571,7 +571,7 @@
 </div><!-- /schedule -->    </div>
 
     <div class="item">
-      <h2 class="schedule-day">24 November 2013</h2>
+      <h2 class="schedule-day">TBA</h2>
 <div class="schedule">
 
   <div class="tentative">
