fix bug regarding speaker resizing and added content for speakers and schedule

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -96,76 +96,51 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <%= image_tag 'samples/avatar-1.jpg' %>
-      <h2>Jeremy White</h2>
-      <div>Candid Platoon</div>
+      <%= image_tag 'samples/pop.png' %>
+      <h2>Prathan "POP" Thananart</h2>
+      <div>Page365</div>
     </div>
   </div>
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <%= image_tag 'samples/avatar-2.jpg' %>
-      <h2>Alex Whitespoon</h2>
-      <div>Open Source Fanatics</div>
+      <%= image_tag 'samples/ben.png' %>
+      <h2>Benjamin Fauchald</h2>
+      <div>Uteeni</div>
     </div>
   </div>
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <%= image_tag 'samples/avatar-3.jpg' %>
-      <h2>Stephanie Sims</h2>
-      <div>BlackHat Linux Inc.</div>
-    </div>
-  </div>
-
-  <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="speaker">
-      <%= image_tag 'samples/avatar-4.jpg' %>
-      <h2>David Blane</h2>
-      <div>Open Source Fanatics</div>
-    </div>
-  </div>
-
-  <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="speaker">
-      <%= image_tag 'samples/avatar-5.jpg' %>
-      <h2>Jason Woods</h2>
+      <%= image_tag 'samples/start.png' %>
+      <h2>Wittawas "Start" Wisarnkanchana</h2>
       <div>Designer Wall Inc.</div>
     </div>
   </div>
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <%= image_tag 'samples/avatar-6.jpg' %>
-      <h2>Lynda Elric</h2>
-      <div>Smashing the Wall</div>
+      <%= image_tag 'samples/zack.png' %>
+      <h2>Sakchai "Zack" Siripanyawuth</h2>
+      <div>Codemy / CTO Uteeni</div>
     </div>
   </div>
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <%= image_tag 'samples/avatar-7.jpg' %>
-      <h2>Rick Taylor</h2>
-      <div>Breaking the Habits Inc.</div>
+      <%= image_tag 'samples/jan.png' %>
+      <h2>Jan Jones</h2>
+      <div>Oozou</div>
     </div>
   </div>
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <%= image_tag 'samples/avatar-8.jpg' %>
-      <h2>Anna Buggati</h2>
-      <div>Positive Design Inc.</div>
+      <%= image_tag 'samples/avatar-4.jpg' %>
+      <h2>Donnie</h2>
+      <div>CTO Omise</div>
     </div>
   </div>
-
-  <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="speaker">
-      <%= image_tag 'samples/avatar-9.jpg' %>
-      <h2>David Lim</h2>
-      <div>Source Code Inc.</div>
-    </div>
-  </div>
-
 </div><!-- /row -->         </div><!-- /content -->
         </div><!-- /inner -->
       </section><!-- /section -->
@@ -197,7 +172,7 @@
         <%= image_tag 'samples/register.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="time">08.00 AM</div>
+        <div class="time">18:00 PM</div>
         <h4>Registration</h4>
       </div>
     </div>
@@ -210,8 +185,9 @@
         <%= image_tag 'samples/opening.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="time">09.00 AM</div>
-        <h4>Opening Ceremony</h4>
+        <div class="time">18:15 PM</div>
+        <h4>Benjamin Fauchald <span>CEO/Uteeni</span></h4>
+        <p><span>Short opening and welcome</span></p>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -220,7 +196,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-3.jpg' %>
+        <%= image_tag 'samples/pop.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -228,10 +204,14 @@
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
-        <div class="time">10.00 AM</div>
-        <h4>Stephanie Sims <span>BlackHat Linux Inc.</span></h4>
-        <p>Topic: <span>Securing your Linux Server</span></p>
-        <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <div class="time">18:30 PM</div>
+        <h4>Prathan "POP" Thananart <span>Page365</span></h4>
+        <p><span>Pop will show you how his team evolved a Ruby on Rails stack that 
+        scales to support 20,000 merchants.</span></p>
+        <p class="summary">
+          Page365 is world's first social commerce engine built for 
+          regional merchants who engage with customers over Facebook and LINE.
+        </p>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -240,7 +220,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-4.jpg' %>
+        <%= image_tag 'samples/zack.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -248,10 +228,17 @@
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
-        <div class="time">11.00 AM</div>
-        <h4>David Blane <span>Open Source Fanatics</span></h4>
-        <p>Topic: <span>Social Platform for Enterprise</span></p>
-        <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <div class="time">18:45 AM</div>
+        <h4>Sakchai "Zack" Siripanyawuth <span>Codemy / CTO Uteeni</span></h4>
+        <p><span>
+          Build and deploy and deploy and app using Vagrant and Docker.
+          Vagrant & Docker = DevEnv FTW
+        </span></p>
+        <p class="summary">
+          Zack does tech training and is training developers from scratch or 
+          any other level to become fluent in the ROR framework and many of his former
+          studens now run sucessfull startups.
+        </p>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -268,10 +255,13 @@
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
-        <div class="time">12.00 AM</div>
-        <h4>Jason Woods <span>Designer Wall Inc.</span></h4>
-        <p>Topic: <span>Designing for Human</span></p>
-        <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <div class="time">19:15 PM</div>
+        <h4>Jan Jones <span>Oozou</span></h4>
+        <p>Topic: <span>How I solved the P VS NP problem in less than thirty minutes using Ruby.</span></p>
+        <p class="summary">
+          Oozou is a Bangkoks leading development house and focuses largely on Rails and iOS.
+          Oozou works primaraly with customers overseas, but have some domestic clients as well.
+        </p>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -283,8 +273,8 @@
         <%= image_tag 'samples/lunch.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="time">01.00 PM</div>
-        <h4>Lunch Break</h4>
+        <div class="time">19:30 PM</div>
+        <h4>Quick Break</h4>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -293,7 +283,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-6.jpg' %>
+        <%= image_tag 'samples/avatar-4.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -301,10 +291,12 @@
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
-        <div class="time">02.00 PM</div>
-        <h4>Lynda Elric <span>Smashing the Wall</span></h4>
-        <p>Topic: <span>PSR Huh?</span></p>
-        <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <div class="time">19:45 PM</div>
+        <h4>Donnie <span>CTO Omise</span></h4>
+        <p><span>AWS</span></p>
+        <p class="summary">
+          Omise is "the Stripe of Asia", solving the one of the biggest    challanges for ecommerce in Soth East Asia, payments. Just a few days ago Omise got its series A round going and we are so lucky to have the CTO here talking about Ruby and scalability.
+        </p>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -313,7 +305,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-7.jpg' %>
+        <%= image_tag 'samples/start.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -321,63 +313,12 @@
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
-        <div class="time">03.00 PM</div>
-        <h4>Rick Taylor <span>Breaking the Habits Inc.</span></h4>
-        <p>Topic: <span>PHP Design Patterns in Real World</span></p>
-        <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-      </div>
-    </div>
-  </div><!-- /tentative -->
-
-
-  <div class="tentative">
-    <div class="row">
-      <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-8.jpg' %>
-      </div>
-      <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
-          <a href="#"><i class="fa fa-facebook-square"></i></a>
-          <a href="#"><i class="fa fa-twitter-square"></i></a>
-          <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
-        <div class="time">04.00 PM</div>
-        <h4>Anna Buggati <span>Positive Design Inc.</span></h4>
-        <p>Topic: <span>Javascript: Beyond the Basics</span></p>
-        <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-      </div>
-    </div>
-  </div><!-- /tentative -->
-
-
-  <div class="tentative">
-    <div class="row">
-      <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/break.jpg' %>
-      </div>
-      <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="time">05.00 PM</div>
-        <h4>Coffee Break</h4>
-      </div>
-    </div>
-  </div><!-- /tentative -->
-
-
-  <div class="tentative">
-    <div class="row">
-      <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-9.jpg' %>
-      </div>
-      <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
-          <a href="#"><i class="fa fa-facebook-square"></i></a>
-          <a href="#"><i class="fa fa-twitter-square"></i></a>
-          <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
-        <div class="time">05.30 PM</div>
-        <h4>David Lim <span>Source Code Inc.</span></h4>
-        <p>Topic: <span>Deploy Secured Web Server with CloudStack</span></p>
-        <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <div class="time">20:15 PM</div>
+        <h4>Wittawas "Start" Wisarnkanchana <span>Senior Developer Uteeni</span></h4>
+        <p><span>PHP Design Patterns in Real World</span></p>
+        <p class="summary">
+          Uteeni is a business directory that focuses on getting every business in Thailand on line for an entery level cost. Customers can easily edit and enhance their online presence for free using either a mobile or desktop. Start will give insight**
+        </p>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -953,15 +894,6 @@
                     <%= f.text_field :email, class: 'form-control', placeholder: 'Email' %>
                   </div>
                 </div><!-- /row -->
-
-
-                <hr>
-                <center>
-                  <h2 style="color: white">
-                    *Attendance is free of charge
-                  </h2>
-                </center>
-
                 <div class="col-lg-12 required">
                     <%= f.submit class: 'btn btn-info btn-lg btn-block' %>
                   </div>
