add text removed dummy sponsors

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -32,20 +32,6 @@
         <div class="inner">
           <div class="content">
             <h1>RUBY CONFERENCE</h1>
-            <p class="sizemic">
-              <!-- RubyCon BKK is a monthly conference focusting on the Ruby language invented by Yukihiro “Matz” Matsumoto.
-              Ruby is an Open Source langauge whogained a lot of popularity after the Ruby on Rails framework was released 
-              in 2006, developed by the Danish David Heinemeier Hansson who used it to write the now world famous Basecamp.
-
-              This technology is used by many of the worlds biggest tech companies in the world because of its abilty for rapid development 
-              and its ability to shorten the time to market for your product. Wanne learn tech? Start here dude, we are very friendly and we help beginners get started and CTOs to get smarter.
-              Thats what the Ruby commmunity does!
-
-              Ruby on Rails developers are now the highest paying development jobs in the tech industry today, and its interest is still growing.
-
-              Amongst the companies use Ruby for their products are: Amazon, Twitter, Hulu, GroupOn, Shopify, Cruncbase, Bloomberg, Indiegogo, 
-              Airbnb, SoundCloud, Heroku, Zendesk, GitHub... Well I think you get it already.... -->
-            </p>
             <h3>20th of May, 2015</h3>
             <h4>Bangkok, Thailand</h4>
             <div>
@@ -87,6 +73,62 @@
           <%= image_tag 'samples/logos/platinum/find-your-space.png' %>
         </a>
       </section>
+
+
+    <section>
+      <div class="statement">
+        <center>  
+          <h1 class="about-header">
+            About
+          </h1>
+        </center>
+        <p>
+            RubyCon BKK is a monthly conference held in Bangkok focusing on the Ruby language invented by Yukihiro “Matz” Matsumoto.
+            Ruby is an Open Source langauge that gained a lot of popularity after the Ruby on Rails framework was released 
+            in 2005, developed by the Danish David Heinemeier Hansson who used it to write the now world famous Basecamp.
+        </p>
+        <p>
+            This technology is used by many of the worlds biggest tech companies in the world because of its abilty for rapid development 
+            and its ability to shorten the time to market for your product. Wanna learn tech? Start here dude, we are very friendly and we help beginners get started and CTOs to get smarter.
+            Thats what the Ruby commmunity does!
+        </p>
+        <p>
+            Ruby on Rails developers are now the highest paying development jobs in the tech industry today, and its interest is still growing.
+        </p>
+        <p>
+            Amongst the companies use Ruby for their products are: Amazon, Twitter, Hulu, GroupOn, Shopify, Cruncbase, Bloomberg, Indiegogo, 
+            Airbnb, SoundCloud, Heroku, Zendesk, GitHub... Well I think you get it already....
+        </p>
+
+        <center>
+          <h1 style="margin: 0px;">
+            Free Macbook!
+          </h1>
+        </center>
+        <center>
+          <h2>
+            What the hell?
+          </h2>
+        </center>
+        <center>
+          <b>
+            Yes, its true. We are giving away a <i>brand new fully specked</i> Macbook Air to you guys just for showing up.
+          </b>
+          <br><br>
+        </center>
+        <center>
+          <i>Yeah, right, whats the catch?</i> <br> <br>
+        </center>
+        <p>
+          No catch! Just register, and put your business card in the jar when you show up
+          and after the speakers are done we will draw out a business card (if you dont have one just put your name in a note) 
+          and that girl, or guy, walks out with a brand new Mac Air. Even we don't have that!
+        </p>
+        <p>
+          So register today, and it will be you that can show off to your friends what you won just by showing up at Ekkamai one random Wednesday!
+        </p>
+      </div>
+    </section>
 
       <section class="section" id="speakers">
         <div class="inner">
@@ -782,7 +824,7 @@
                 It all goes back to you guys eventually, it's like carbon. ;)  
               </p>            
             </div>
-
+<!-- 
             <h2>Platinum Sponsors</h2>
 
             <div>
@@ -819,43 +861,11 @@
               <a href="#">
                 <%= image_tag 'samples/logos/CloudStack.png' %>
               </a>
-            </div>          
+            </div>   -->        
           </div><!-- /content -->
 
         </div><!-- /inner -->
       </section><!-- /section -->
-
-      <section class="promo">
-        <div class="statement" style="color: white">
-          <center>
-            <h1 style="margin: 0px;">
-              Free Macbook!
-            </h1>
-          </center>
-          <center>
-            <h2>
-              What the hell?
-            </h2>
-          </center>
-          <center>
-            <b>
-              Yes, its true. We are giving away a <i>brand new fully specked</i> Macbook Air to you guys just for showing up.
-            </b>
-            <br><br>
-          </center>
-          <center>
-            <i>Yeah, right, whats the catch?</i> <br> <br>
-          </center>
-          <p>
-            No catch! Just register, and put your business card in the jar when you show up
-            and after the speakers are done we will draw out a business card (if you dont have one just put your name in a note) 
-            and that girl, or guy, walks out with a brand new Mac Air. Even we don't have that!
-          </p>
-          <p>
-            So register today, and it will be you that can show off to your friends what you won just by showing up at Ekkamai one random Wednesday!
-          </p>
-        </div>
-
 
       </section>
 
