--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>BangkokRb</title>
+  <meta name="robots" content="noindex">
+  <meta name="googlebot" content="noindex">
   <link href="//fonts.googleapis.com/css?family=Andada" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
