change speaker picture Jan

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -289,7 +289,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-       <%= image_tag 'samples/avatar-5.jpg' %>
+       <%= image_tag 'samples/jan.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
