edit text for speakers

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -75,7 +75,7 @@
       </section>
 
 
-    <section>
+    <section class="about-section">
       <div class="statement">
         <center>  
           <h1 class="about-header">
@@ -146,14 +146,6 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <%= image_tag 'samples/ben.png' %>
-      <h2>Benjamin Fauchald</h2>
-      <div>Uteeni</div>
-    </div>
-  </div>
-
-  <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="speaker">
       <%= image_tag 'samples/start.png' %>
       <h2>Wittawas "Start" Wisarnkanchana</h2>
       <div>Designer Wall Inc.</div>
@@ -179,10 +171,20 @@
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
       <%= image_tag 'samples/avatar-4.jpg' %>
-      <h2>Donnie</h2>
+      <h2>Robin C</h2>
       <div>CTO Omise</div>
     </div>
   </div>
+
+
+  <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="speaker">
+      <%= image_tag 'samples/avatar-5.jpg' %>
+      <h2>AWS</h2>
+      <div>TBA</div>
+    </div>
+  </div>
+
 </div><!-- /row -->         </div><!-- /content -->
         </div><!-- /inner -->
       </section><!-- /section -->
@@ -278,7 +280,7 @@
         </span></p>
         <p class="summary">
           Zack does tech training and is training developers from scratch or 
-          any other level to become fluent in the ROR framework and many of his former
+          any other level to become fluent <br> in the ROR framework and many of his former
           studens now run sucessfull startups.
         </p>
       </div>
@@ -301,7 +303,7 @@
         <h4>Jan Jones <span>Oozou</span></h4>
         <p>Topic: <span>How I solved the P VS NP problem in less than thirty minutes using Ruby.</span></p>
         <p class="summary">
-          Oozou is a Bangkoks leading development house and focuses largely on Rails and iOS.
+          Oozou is a Bangkoks leading development house and focuses largely on Rails and iOS. <br>
           Oozou works primaraly with customers overseas, but have some domestic clients as well.
         </p>
       </div>
@@ -334,10 +336,31 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">19:45 PM</div>
-        <h4>Donnie <span>CTO Omise</span></h4>
-        <p><span>AWS</span></p>
+        <h4>Robin Clart <span>CTO Omise</span></h4>
+        <p><span>TBA</span></p>
         <p class="summary">
-          Omise is "the Stripe of Asia", solving the one of the biggest    challanges for ecommerce in Soth East Asia, payments. Just a few days ago Omise got its series A round going and we are so lucky to have the CTO here talking about Ruby and scalability.
+          Omise is "the Stripe of Asia", solving the one of the biggest challanges for ecommerce in Soth East Asia, payments. <br> Just a few days ago Omise got its series A round going and we are so lucky to have the CTO here talking about Ruby and scalability.
+        </p>
+      </div>
+    </div>
+  </div><!-- /tentative -->
+
+  <div class="tentative">
+    <div class="row">
+      <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
+        <%= image_tag 'samples/avatar-5.jpg' %>
+      </div>
+      <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
+        <div class="social">
+          <a href="#"><i class="fa fa-facebook-square"></i></a>
+          <a href="#"><i class="fa fa-twitter-square"></i></a>
+          <a href="#"><i class="fa fa-google-plus-square"></i></a>
+        </div>
+        <div class="time">19:45 PM</div>
+        <h4>TBA <span>AWS</span></h4>
+        <p><span>TBA</span></p>
+        <p class="summary">
+          TBA
         </p>
       </div>
     </div>
@@ -359,7 +382,7 @@
         <h4>Wittawas "Start" Wisarnkanchana <span>Senior Developer Uteeni</span></h4>
         <p><span>PHP Design Patterns in Real World</span></p>
         <p class="summary">
-          Uteeni is a business directory that focuses on getting every business in Thailand on line for an entery level cost. Customers can easily edit and enhance their online presence for free using either a mobile or desktop. Start will give insight**
+          Uteeni is a business directory that focuses on getting every business in Thailand on line for an entery level cost. <br> Customers can easily edit and enhance their online presence for free using either a mobile or desktop. Start will give insight**
         </p>
       </div>
     </div>
@@ -916,7 +939,7 @@
 
 
     </div>
-    <footer>
+<!--     <footer>
       <div class="container">
 
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 socials">
@@ -938,4 +961,4 @@
           &copy; Expert Conference 2013
         </div>
       </div>
-    </footer>
+    </footer> -->
